fix skills section alignment

--- a/src/mediaqueries.css
+++ b/src/mediaqueries.css
@@ -1,3 +1,11 @@
+@media screen and (min-width: 1401px) {
+    #experience {
+        width: auto;
+    }
+}
+
+
+
 @media screen and (max-width: 1400px) {
     #profile {
         height: 83vh;
